--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -331,7 +331,7 @@ import Layout from '@layouts/Layout.astro';
           <div
             class="grid grid-cols-6 gap-1 text-center text-sm text-slate-200"
           >
-            <span class="rounded-lg bg-slate-700 py-1">Nobile Robotics</span>
+            <span class="rounded-lg bg-slate-700 py-1">Mobile Robotics</span>
             <span class="rounded-lg bg-slate-700 py-1">Kinematics</span>
             <span class="rounded-lg bg-slate-700 py-1">Vehicle Dynamics</span>
             <span class="rounded-lg bg-slate-700 py-1">Sensor Fusion</span>
