fix: remove pr from projects

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -699,7 +699,7 @@ import dlai from '@assets/dlai-logo.jpeg';
               <p class="font-light">Aug. 2021 - Aug. 2022</p>
             </div>
             <ul
-              class="col-span-3 mt-2 flex list-inside list-disc flex-col pr-14 text-justify text-sm"
+              class="col-span-3 mt-2 flex list-inside list-disc flex-col text-justify text-sm"
             >
               <li>
                 Designed and delivered a comprehensive deep‑learning workshop
@@ -733,7 +733,7 @@ import dlai from '@assets/dlai-logo.jpeg';
               <p class="font-light">Aug. 2021 - Aug. 2022</p>
             </div>
             <ul
-              class="col-span-3 mt-2 flex list-inside list-disc flex-col pr-14 text-justify text-sm"
+              class="col-span-3 mt-2 flex list-inside list-disc flex-col text-justify text-sm"
             >
               <li>
                 Engaged in the integration of a 2017 Ford Fusion, with
@@ -780,7 +780,7 @@ import dlai from '@assets/dlai-logo.jpeg';
               <p class="font-light">Aug. 2021 - Aug. 2022</p>
             </div>
             <ul
-              class="col-span-3 mt-2 flex list-inside list-disc flex-col pr-14 text-justify text-sm"
+              class="col-span-3 mt-2 flex list-inside list-disc flex-col text-justify text-sm"
             >
               <li>
                 Led the conceptualization and creation of a sophisticated
@@ -830,7 +830,7 @@ import dlai from '@assets/dlai-logo.jpeg';
               <p class="font-light">Aug. 2021 - Aug. 2022</p>
             </div>
             <ul
-              class="col-span-3 mt-2 flex list-inside list-disc flex-col pr-14 text-justify text-sm"
+              class="col-span-3 mt-2 flex list-inside list-disc flex-col text-justify text-sm"
             >
               <li>
                 Contributed to a pioneering project at the University of San
@@ -880,7 +880,7 @@ import dlai from '@assets/dlai-logo.jpeg';
                 <p class="font-light">Aug. 2021 - Aug. 2022</p>
               </div>
               <ul
-                class="col-span-3 mt-2 flex list-inside list-disc flex-col pr-14 text-justify text-sm"
+                class="col-span-3 mt-2 flex list-inside list-disc flex-col text-justify text-sm"
               >
                 <li>
                   Educational project for an ultra&dash;low&dash;cost
@@ -906,7 +906,7 @@ import dlai from '@assets/dlai-logo.jpeg';
                 <p class="font-light">Feb. 2018 - Dec. 2018</p>
               </div>
               <ul
-                class="col-span-3 mt-2 flex list-inside list-disc flex-col pr-14 text-justify text-sm"
+                class="col-span-3 mt-2 flex list-inside list-disc flex-col text-justify text-sm"
               >
                 <li>
                   Implemented a visual navigation system for simultaneous mobile
