--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,8 +1,5 @@
 ---
 import '@styles/globals.css';
-import '@fontsource-variable/m-plus-2';
-// Supports weights 100-900
-import '@fontsource-variable/inter';
 
 interface Props {
   title: string;
@@ -21,7 +18,7 @@ const { title } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
-  <body>
+  <body class="bg-dark-void">
     <slot />
   </body>
 </html>
@@ -29,13 +26,11 @@ const { title } = Astro.props;
   :root {
     --system-ui: system-ui, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif,
       'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
-    --font-m-plus-2: 'M PLUS 2 Variable';
   }
 
   html,
   body {
     font-family: var(--system-ui);
-    background: #0d0d0e;
   }
 
   @page {
