feat: add experience information

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -120,7 +120,7 @@ import coder from '@assets/coder-logo.jpeg';
                 Compass Group Argentina
               </p>
               <p class="mr-auto text-sm">4 yrs 4 mos</p>
-              <div class="mt-2 flex flex-col text-sm">
+              <div class="page-break mt-2 flex flex-col text-sm">
                 <p class="text-lg font-semibold">Marketing Analyst</p>
                 <p class="font-light">Buenos Aires, Argentina</p>
                 <div class="flex gap-1 sm:gap-2">
@@ -131,8 +131,27 @@ import coder from '@assets/coder-logo.jpeg';
                 <ul
                   class="col-span-3 mt-2 flex list-inside list-disc flex-col text-sm sm:pr-14"
                 >
-                  <li class="text-justify">Placeholder</li>
-                  <li class="text-justify">Placeholder</li>
+                  <li>
+                    Implementation and analysis of satisfaction surveys to improve the customer experience.
+                  </li>
+                  <li class="text-justify">
+                    Responsible for the area's billing, ensuring the accuracy and compliance of financial processes.
+                  </li>
+                  <li>
+                    Effective coordination with suppliers to ensure quality and efficiency in the supply chain.
+                  </li>
+                  <li>
+                    Creation and design of graphic pieces, maintaining consistency with the brand's visual identity.
+                  </li>
+                  <li>
+                    Strategic planning, coordination, and execution of the social media agenda, including content generation in collaboration with external agencies.
+                  </li>
+                  <li>
+                    Development, management, and positioning of the brand's presence in various dining areas, ensuring a consistent and positive representation.
+                  </li>
+                  <li>
+                    Active participation in operational assistance, contributing to the efficient operation and continuous improvement of processes.
+                  </li>
                 </ul>
               </div>
               <div class="mt-2 flex flex-col text-sm">
@@ -146,21 +165,21 @@ import coder from '@assets/coder-logo.jpeg';
                 <ul
                   class="col-span-3 mt-2 flex list-inside list-disc flex-col text-sm sm:pr-14"
                 >
-                  <li class="text-justify">
-                    Responsible for the preparation of patient dishes and
-                    authorized personnel.
-                  </li>
-                  <li class="text-justify">
-                    Supervise the quality of the food service in order to meet
-                    the hospital's requirements.
+                  <li>
+                    Prepare over 1,000 patient meals daily and authorized personnel meals 
+                    while ensuring proper nutritional guidelines and dietary restrictions are met.
                   </li>
                   <li>
-                    Team leader of a +60 people group, promoting teamwork and
-                    generating training for continuous improvement.
+                    Monitor food service quality to achieve a 99% satisfaction rate by implementing
+                    consistent quality control measures.
                   </li>
                   <li>
-                    Verification and control of the raw material stock
-                    maximizing production efficiency.
+                    Lead a team of over 60 members, fostering collaboration and facilitating ongoing training,
+                    resulting in a 15% reduction in production errors.
+                  </li>
+                  <li>
+                    Implement raw material stock verification and control systems,
+                    reducing food waste by 20% and optimizing production efficiency.
                   </li>
                 </ul>
               </div>
@@ -189,11 +208,16 @@ import coder from '@assets/coder-logo.jpeg';
                 class="col-span-3 mt-2 flex list-inside list-disc flex-col text-justify text-sm sm:pr-14"
               >
                 <li>
-                  Responsible for the nutrition of hospitalized patients
-                  according to the diet therapy criteria.
+                  Ensured optimal nutrition for hospitalized patients by creating personalized meal plans tailored to individual needs and restrictions.
                 </li>
                 <li>
-                  Provided workforce training on food-service best practices.
+                  Collaborated closely with patients to understand their dietary preferences and medical conditions.
+                </li>
+                <li>
+                  Implemented strict dietetic practices to guarantee food safety and compliance with regulations.
+                </li>
+                <li>
+                  Championed continuous improvement by monitoring patient satisfaction and food service efficiency.
                 </li>
               </ul>
             </div>
@@ -218,16 +242,21 @@ import coder from '@assets/coder-logo.jpeg';
               <ul
                 class="col-span-3 mt-2 flex list-inside list-disc flex-col text-justify text-sm sm:pr-14"
               >
-                <li>Placeholder</li>
+                <li>
+                  Design and present the specialized module on &quot;Nutrition in Old Age&quot;
+                  as part of the &quot;Geriatric Care Assistan&quot; course organized by the AMIA.
+                </li>
+                <li>
+                  Train over 120 students in the fundamentals of nutrition in old age.
+                </li>
               </ul>
             </div>
           </div>
         </li>
       </ul>
     </section>
-  </main>
-  <section
-    class="page-break mt-4 flex flex-col gap-2 rounded-lg border border-gray-300 bg-white p-6 print:border-0 print:p-0"
+    <section
+    class="mt-4 flex flex-col gap-2 rounded-lg border border-gray-300 bg-white p-6 print:border-0 print:p-0"
   >
     <div class="flex flex-col">
       <div class="text-2xl">Skills</div>
@@ -282,7 +311,7 @@ import coder from '@assets/coder-logo.jpeg';
           >
         </div>
       </li>
-      <li class="flex flex-col gap-2 pr-14">
+      <li class="page-break flex flex-col gap-2 pr-14">
         <span class="font-semibold">Branding</span>
         <div class="flex flex-wrap gap-1 text-center text-sm text-slate-200">
           <span
@@ -593,4 +622,5 @@ import coder from '@assets/coder-logo.jpeg';
       </a>
     </ul>
   </section>
+  </main>
 </Layout>
