fix: adapt page breaks

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -121,12 +121,12 @@ import coder from '@assets/coder-logo.jpeg';
               </p>
               <p class="mr-auto text-sm">4 yrs 4 mos</p>
               <ul>
-                <li class="page-break relative mt-2 flex flex-col text-sm">
+                <li class="relative mt-2 flex flex-col text-sm">
                   <span
-                    class="absolute left-[calc(-2.2rem-6.5px/2)] top-5 block h-2 w-2 rounded-lg bg-gray-400"
+                    class="absolute left-[calc(-2.2rem-6.5px/2)] top-3 block h-2 w-2 rounded-lg bg-gray-400"
                   ></span>
                   <div
-                    class="before:absolute before:left-[calc(-2.2rem-1px/2)] before:top-[calc(calc(1.2rem+.8rem)+.6rem)] before:h-[calc(100%-(1.8rem))] before:w-[2px] before:bg-gray-300 before:content-['']"
+                    class="before:absolute before:left-[calc(-2.2rem-1px/2)] before:top-[calc(calc(1.2rem+.8rem)+.1rem)] before:h-[calc(100%-(1.8rem))] before:w-[2px] before:bg-gray-300 before:content-['']"
                   >
                     <p class="text-lg font-semibold">Marketing Analyst</p>
                     <p class="font-light">Buenos Aires, Argentina</p>
@@ -174,7 +174,7 @@ import coder from '@assets/coder-logo.jpeg';
                 </li>
                 <li class="relative mt-2 flex flex-col text-sm">
                   <span
-                    class="absolute left-[calc(-2.2rem-6.5px/2)] top-5 block h-2 w-2 rounded-lg bg-gray-400"
+                    class="absolute left-[calc(-2.2rem-6.5px/2)] top-3 block h-2 w-2 rounded-lg bg-gray-400"
                   ></span>
                   <p class="text-lg font-semibold">Food Service Manager</p>
                   <p class="font-light">Buenos Aires, Argentina</p>
@@ -343,7 +343,7 @@ import coder from '@assets/coder-logo.jpeg';
             >
           </div>
         </li>
-        <li class="page-break flex flex-col gap-2 pr-14">
+        <li class="flex flex-col gap-2 pr-14">
           <span class="font-semibold">Branding</span>
           <div class="flex flex-wrap gap-1 text-center text-sm text-slate-200">
             <span
