fix: edit tense

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -273,12 +273,12 @@ import coder from '@assets/coder-logo.jpeg';
                 class="col-span-3 mt-2 flex list-inside list-disc flex-col text-sm sm:pr-14"
               >
                 <li>
-                  Design and present the specialized module on &quot;Nutrition
+                  Designed and present the specialized module on &quot;Nutrition
                   in Old Age&quot; as part of the &quot;Geriatric Care
                   Assistan&quot; course organized by the AMIA.
                 </li>
                 <li>
-                  Train over 60 students in the fundamentals of nutrition in
+                  Trained over 60 students in the fundamentals of nutrition in
                   old age.
                 </li>
               </ul>
