fix: edit tense

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -273,7 +273,7 @@ import coder from '@assets/coder-logo.jpeg';
                 class="col-span-3 mt-2 flex list-inside list-disc flex-col text-sm sm:pr-14"
               >
                 <li>
-                  Designed and present the specialized module on &quot;Nutrition
+                  Designed and presented the specialized module on &quot;Nutrition
                   in Old Age&quot; as part of the &quot;Geriatric Care
                   Assistan&quot; course organized by the AMIA.
                 </li>
