--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,18 +1,13 @@
 ---
-import { getLangFromUrl } from '../i18n/utils';
-import '@/styles/globals.css';
-
 interface Props {
   title: string;
 }
 
 const { title } = Astro.props;
-
-const lang = getLangFromUrl(Astro.url);
 ---
 
 <!doctype html>
-<html lang={lang}>
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="description" content="Astro description" />
@@ -36,14 +31,14 @@ const lang = getLangFromUrl(Astro.url);
     font-family: var(--system-ui);
   }
 
-  @page {
-    margin-top: 1cm;
-    margin-bottom: 1cm;
-  }
-
   @media print {
     .page-break {
       page-break-after: always;
+    }
+
+    @page {
+      margin-top: 1cm;
+      margin-bottom: 1cm;
     }
 
     html,
@@ -52,4 +47,3 @@ const lang = getLangFromUrl(Astro.url);
     }
   }
 </style>
-@/i18n/utils @i18n/utils
